--- a/src/app/style/style.css
+++ b/src/app/style/style.css
@@ -8,70 +8,51 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
-.Form-container {
+.form {
+  width: 500px;
+  margin: 0 auto;
+  padding: 12px 0px;
+}
+
+.form > div{
+  padding: 12px 0px;
+}
+
+input {
   width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  border: 2px solid blueviolet;
-  border-radius: 33px;
-  -webkit-border-radius: 33px;
-  -moz-border-radius: 33px;
-  -ms-border-radius: 33px;
-  -o-border-radius: 33px;
+  padding: 10px;
+  margin-top: 12px;
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  -ms-border-radius: 12px;
+  -o-border-radius: 12px;
 }
 
-.Form-container label {
-  font-weight: bold;
-  max-width: 50%;
-  display: block;
-  margin: 0 auto;
-  margin-top: 22px;
-
-}
-
-.Form-container input {
+button {
+  background-color: #007bff;
+  color: white;
+  padding: 10px;
   border: none;
-  background-color: transparent;
-  border-bottom: 3px solid rgba(5, 231, 118, 0.648);
+  cursor: pointer;
   display: block;
-  padding: 20px;
   width: 50%;
-  margin: 0 auto;
   text-align: center;
-  transition: 1s ease-in-out;
-  -webkit-transition: 1s ease-in-out;
-  -moz-transition: 1s ease-in-out;
-  -ms-transition: 1s ease-in-out;
-  -o-transition: 1s ease-in-out;
-  margin-bottom: 22px;
+  margin: 12px auto;
+  border-radius: 12px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  -ms-border-radius: 12px;
+  -o-border-radius: 12px;
+}
+.error{
+  color: red;
 }
 
-.Form-container input:focus {
-  outline: none;
-  width: 100%;
-  background-color: transparent;
-
-}
-.Form-container h1{
-    text-align: center;
-    margin: 22px 10px;
-}
-.Form-container button{
-    background-color: rgb(7, 160, 99);
-    text-align: center;
-    color: aliceblue;
-    width: 100%;
-    display: block;
-    cursor: pointer;
-    border: none;
-    padding: 12px 20px;
-    margin: 40px 10px;
-    border-radius: 22px;
-    font-weight: bold;
-    font-size: 1rem;
-    -webkit-border-radius: 22px;
-    -moz-border-radius: 22px;
-    -ms-border-radius: 22px;
-    -o-border-radius: 22px;
+.character-count{
+  color: green;
 }
